--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
-<midapp-nx-welcome></midapp-nx-welcome> <router-outlet></router-outlet>
+<midapp-nx-welcome></midapp-nx-welcome> 
+<router-outlet></router-outlet>
